--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,10 +9,13 @@ parts =
     supervisord.ini
     bridge.yaml
     mkdirs
+    pytest
 
 eggs =
     openprocurement.bridge.basic
     openprocurement.ocds.api
+    pytest
+    pytest-flask
 
 
 find-links = http://op:x9W3jZ@dist.quintagroup.com/op/
@@ -32,6 +35,10 @@ recipe = amplecode.recipe.template
 template-file = templates/${:_buildout_section_name_}
 target-file = ${buildout:directory}/bin/${:_buildout_section_name_}
 target-executable = true
+
+[pytest]
+<=scripts
+scripts += pytest, pytest-flask
 
 [scripts]
 recipe = zc.recipe.egg
