rewrite run view gunicorn; move it to supervisor; fixed tests after it

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,7 +4,7 @@ extensions = mr.developer
 parts =
     scripts
     supervisor
-    config.yaml
+    config.ini
     couchdb.ini
     supervisord.ini
     bridge.yaml
@@ -16,6 +16,7 @@ eggs =
     openprocurement.ocds.api
     pytest
     pytest-flask
+    gunicorn
 
 
 find-links = http://op:x9W3jZ@dist.quintagroup.com/op/
@@ -44,13 +45,6 @@ scripts += pytest, pytest-flask
 recipe = zc.recipe.egg
 eggs = ${buildout:eggs}
 
-[openprocurement.ocds.api]
-<=scripts
-eggs = openprocurement.ocds.api
-interpreter = python
-scripts =
-    runserver
-
 [supervisor]
 <=scripts
 eggs = supervisor
@@ -62,6 +56,15 @@ scripts = supervisord
 [supervisord.ini]
 <= config-from-template
 develop =
+
+[config.ini]
+<= config-from-template
+server_host = localhost
+server_port = 8000
+couch_host = localhost
+couch_port = 5984
+releases_db = releases
+
 
 [bridge.yaml]
 <= config-from-template
