--- a/templates/supervisord.ini
+++ b/templates/supervisord.ini
@@ -24,3 +24,14 @@ command=couchdb -a ${parts.buildout.directory}/etc/couchdb.ini
 stderr_logfile = ${parts.buildout.directory}/var/log/couchdb/couch-stderr.log
 stdout_logfile = ${parts.buildout.directory}/var/log/couchdb/couch-stdout.log
 environment=HOME=${parts.buildout.directory}/var
+
+[program:api_server]
+command=${parts.buildout.directory}/bin/gunicorn --paste ${parts.buildout.directory}/etc/config.ini
+stdout_stream.class = FileStream
+stdout_stream.filename = ${parts.buildout.directory}/var/log/server.stdout.log
+stdout_stream.max_bytes = 134217728
+stdout_stream.backup_count = 1
+stderr_stream.class = FileStream
+stderr_stream.filename = ${parts.buildout.directory}/var/log/server.stderr.log
+stderr_stream.max_bytes = 134217728
+stderr_stream.backup_count = 1
