Added metainfo and marshaling

--- a/app.ini
+++ b/app.ini
@@ -2,7 +2,11 @@
 use = egg:ocdsapi
 couchdb_host = admin:admin@localhost
 couchdb_port = 5984
-couchdb_dbname = releasedb
+couchdb_dbname = releases
+publisher.name = ДП "Прозорро"
+publicationPolicy = https://prozorro.gov.ua/publication-policy
+license = https://creativecommons.…/publicdomain/zero/0.0/
+
 
 [server:main]
 use = egg:gunicorn#main
