--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,21 @@
 variables:
   COMPONENT_PROJECT_ID: 466
   COMPONENT_PROJECT_PIPELINE_TRIGGER: 5ec45d577ae29bc712f6e438d62e31
+  PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache"
 
 before_script:
-  - docker info
+  - python3 -V && python3 -m venv venv && source venv/bin/activate
 
-build:
-  stage: build
+test:
   script:
-    - docker run --rm -i -v `pwd`:/package:Z -w /package python:3.6.5-alpine sh -c "pip install .[test] && pytest tests/; chown -R `id -u`:`id -g` /package && ls -AlhF"
+    - pip install .[test]
+    - pytest tests/
+    - python setup.py sdist
     - "curl -XPOST --form token=$COMPONENT_PROJECT_PIPELINE_TRIGGER --form ref=master https://gitlab.quintagroup.com/api/v4/projects/$COMPONENT_PROJECT_ID/trigger/pipeline"
+  artifacts:
+    expire_in: 1 week
+    paths:
+      - dist
   tags:
     - spage
   only:
