--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,9 +9,8 @@ before_script:
 test:
   script:
     - pip install .[test]
-    - COUCHDB_TEST_CONTAINER=`docker run -d -p "127.0.0.1:5984:5984" couchdb:1.7.2`
-    - pytest tests/
-    - docker rm -f $COUCHDB_TEST_CONTAINER
+    - COUCHDB_TEST_CONTAINER=`docker run -d -e COUCHDB_USER=admin -e COUCHDB_PASSWORD=admin -p "127.0.0.1:5984:5984" couchdb:1.7.2`
+    - pytest tests/; docker rm -f $COUCHDB_TEST_CONTAINER
     - python setup.py sdist
     - "curl -XPOST --form token=$COMPONENT_PROJECT_PIPELINE_TRIGGER --form ref=master https://gitlab.quintagroup.com/api/v4/projects/$COMPONENT_PROJECT_ID/trigger/pipeline"
   artifacts:
