--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,18 @@
 variables:
   COMPONENT_PROJECT_ID: 466
-  COMPONENT_PROJECT_PIPELINE_TRIGGER: 5ec45d577ae29bc712f6e438d62e31
-  CI_DOCKER_REGISTRY: ocds-jenkins-master.office.quintagroup.com:5000
-  CI_DOCKER_IMAGE: ocdsapi
+  COMPONENT_PROJECT_PIPELINE_TRIGGER: "$OCDSAPI_COMPONENT_PROJECT_PIPELINE_TRIGGER"
+  CI_DOCKER_REGISTRY: docker.io
+  CI_DOCKER_IMAGE: spageorgia/ocdsapi
   CI_DOCKER_TAG: ci
 
 
 before_script:
+  - docker login -u "$DOCKER_HUB_USERNAME" -p "$DOCKER_HUB_PASSWORD" "$CI_DOCKER_REGISTRY"
   - docker info
   - docker run -d --name $CI_COMMIT_REF_SLUG_$CI_JOB_ID -e COUCHDB_USER=admin -e COUCHDB_PASSWORD=admin -p 5984:5984 couchdb:1.7.2
 after_script:
   - docker rm -f "$CI_COMMIT_REF_SLUG_$CI_JOB_ID"
+  - docker logout  "$CI_DOCKER_REGISTRY"
 
 test:
   script:
@@ -18,5 +20,5 @@ test:
     - "curl -XPOST --form token=$COMPONENT_PROJECT_PIPELINE_TRIGGER --form ref=master https://gitlab.quintagroup.com/api/v4/projects/$COMPONENT_PROJECT_ID/trigger/pipeline"
   tags:
     - spage
-#   only:
-#     - master
+  only:
+    - master
