--- a/contrib/api.ini
+++ b/contrib/api.ini
@@ -1,16 +1,24 @@
 [app:main]
 use = egg:ocdsapi
-couchdb_host = admin:admin@localhost
-couchdb_port = 5984
+couchdb_url = http://admin:admin@localhost:5984
 couchdb_dbname = releases
-publisher.name = ДП "Прозорро"
-publicationPolicy = https://prozorro.gov.ua/publication-policy
-license = https://creativecommons.…/publicdomain/zero/0.0/
+paginate_by = 21
+# metainfo
+metainfo.file = contrib/meta.yml
+swagger.file = contrib/swagger.yml
+extensions =
+    https://raw.githubusercontent.com/open-contracting/ocds_enquiry_extension/v1.1.3/extension.json
+    https://raw.githubusercontent.com/open-contracting/ocds_lots_extension/master/extension.json
 
 
 [server:main]
 use = egg:gunicorn#main
-listen = localhost:8080
+host = 0.0.0.0
+port = 8000
+workers = 1
+proc_name = api_server
+worker_class = gunicorn.workers.ggevent.GeventWorker
+timeout = 300
 
 [loggers]
 keys = root
