--- a/ocdsapi/doc/releases.json
+++ b/ocdsapi/doc/releases.json
@@ -1,6 +1,7 @@
 {
     "summary" : "Returns OCDS records",
-    "description" : "This should return an object and in it should be a OCDS records list and links object.  The links object should have a 'next' property with the url of the next url that is to visited when paging through the results.  Normally a full OCDS record should be in the 'records' list.  The results should be listed in modified date descending.",
+    "produces": ["application/json"],
+    "description" : "Due to releases the updates on each contracting process event are supplied on a real-time basis. This feature assists users in receiving notifications about announcing new tenders, conducted awards, making contracts and similar updates. More than one releases may be published during a contracting process. Releases cannot be altered at any point since they are supposed to provide information precisely following each step of contracting cycle.",
     "responses": {
         "200": {"description": "List of records"}
     },
