--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-addopts = -q --cov-report term-missing --cov=ocdsapi
-python_files = tests/test*.py
+testpaths = ocdsapi
+python_files = test*.py
