--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,49 @@
-aniso8601==3.0.2
-arrow==0.12.1
-certifi==2018.4.16
+alembic==1.0.2
+amqp==2.3.2
+billiard==3.5.0.4
+celery==4.2.1
+certifi==2018.10.15
+cffi==1.11.5
 chardet==3.0.4
-click==6.7
-CouchDB==1.2
-Flask==1.0.2
-Flask-RESTful==0.3.6
-gevent==1.3.3
-greenlet==0.4.13
-gunicorn==19.8.1
+colander==1.5.1
+cornice==3.4.2
+cornice-swagger==0.7.0
+fastjsonschema==2.6
+hupper==1.4
 idna==2.7
 iso8601==0.1.12
-itsdangerous==0.24
-Jinja2==2.10
-jsonref==0.1
-MarkupSafe==1.0
-ocdsmerge==0.4
+jsonref==0.2
+kombu==4.2.1
+Mako==1.0.7
+MarkupSafe==1.1.0
+-e git+https://github.com/yshalenyk/ocds-merge.git@master#egg=ocdsmerge
+paginate==0.5.6
+paginate-sqlalchemy==0.3.0
 PasteDeploy==1.5.2
-python-dateutil==2.7.3
-pytz==2018.4
-requests==2.19.1
+plaster==1.0
+plaster-pastedeploy==0.6
+psycopg2cffi==2.8.1
+pycparser==2.19
+pyramid==1.10.1
+pyramid-celery==3.0.0
+pyramid-retry==1.0
+pyramid-tm==2.2.1
+python-dateutil==2.7.5
+python-editor==1.0.3
+pytz==2018.7
+PyYAML==3.13
+requests==2.20.0
+simplejson==3.16.0
 six==1.11.0
-urllib3==1.23
-virtualenv==16.0.0
-Werkzeug==0.14.1
+SQLAlchemy==1.2.13
+sqlalchemy-paginate==0.0.2
+transaction==2.4.0
+translationstring==1.3
+urllib3==1.24.1
+venusian==1.1.0
+vine==1.1.4
+waitress==1.1.0
+WebOb==1.8.3
+zope.deprecation==4.3.0
+zope.interface==4.6.0
+zope.sqlalchemy==1.0
