new swagger && fixed packaging in record and release view:

--- a/ocdsapi/doc/releases.json
+++ b/ocdsapi/doc/releases.json
@@ -3,7 +3,8 @@
     "produces": ["application/json"],
     "description" : "Due to releases the updates on each contracting process event are supplied on a real-time basis. This feature assists users in receiving notifications about announcing new tenders, conducted awards, making contracts and similar updates. More than one releases may be published during a contracting process. Releases cannot be altered at any point since they are supposed to provide information precisely following each step of contracting cycle.",
     "responses": {
-        "200": {"description": "List of records"}
+        "200": {"description": "Release package"},
+        "404": {"description": "Relase package unavailable"}
     },
     "parameters": [
         {
