Added auth for post releases

--- a/development.ini
+++ b/development.ini
@@ -4,6 +4,7 @@ use = egg:ocdsapi
 sqlalchemy.url = postgresql+psycopg2cffi://postgres:admin@127.0.0.1:5432/releases
 swagger.file = swagger.yaml
 
+api.tokens = ce5lah8oechu5ZohHei7ieTh7xiLahb6na3
 api.schema = release-schema.json
 api.page_size = 100
 api.publisher = publisher.yml
