--- a/development.ini
+++ b/development.ini
@@ -1,9 +1,14 @@
 [app:main]
 use = egg:ocdsapi
 
+elasticsearch.url = http://0.0.0.0:9200
+elasticsearch.index = releases
+elasticsearch.mapping = mapping.json
+
 sqlalchemy.url = postgresql+psycopg2cffi://postgres:admin@127.0.0.1:5432/releases
 swagger.file = swagger.yaml
 
+apps = ocdsapi_outlet:install
 api.tokens = ce5lah8oechu5ZohHei7ieTh7xiLahb6na3
 api.schema = release-schema.json
 api.page_size = 100
@@ -19,6 +24,7 @@ retry.attempts = 3
 
 [pshell]
 setup = ocdsapi.pshell.setup
+
 
 [alembic]
 # path to migration scripts
