Added new utils

--- a/development.ini
+++ b/development.ini
@@ -8,7 +8,7 @@ elasticsearch.mapping = mapping.json
 sqlalchemy.url = postgresql+psycopg2cffi://postgres:admin@127.0.0.1:5432/releases
 swagger.file = swagger.yaml
 
-apps = ocdsapi_outlet:install
+#apps = ocdsapi_outlet:install
 api.tokens = ce5lah8oechu5ZohHei7ieTh7xiLahb6na3
 api.schema = release-schema.json
 api.page_size = 100
