--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-alembic==1.0.2
+alembic==1.0.3
 amqp==2.3.2
 billiard==3.5.0.4
 celery==4.2.1
@@ -8,15 +8,17 @@ chardet==3.0.4
 colander==1.5.1
 cornice==3.4.2
 cornice-swagger==0.7.0
+deep-merge==0.0.4
+elasticsearch==6.3.1
 fastjsonschema==2.6
-hupper==1.4
+hupper==1.4.1
 idna==2.7
 iso8601==0.1.12
 jsonref==0.2
 kombu==4.2.1
 Mako==1.0.7
 MarkupSafe==1.1.0
--e git+https://github.com/yshalenyk/ocds-merge.git@master#egg=ocdsmerge
+-e git+https://github.com/yshalenyk/ocds-merge#egg=ocdsmerge
 paginate==0.5.6
 paginate-sqlalchemy==0.3.0
 PasteDeploy==1.5.2
@@ -25,25 +27,24 @@ plaster-pastedeploy==0.6
 psycopg2cffi==2.8.1
 pycparser==2.19
 pyramid==1.10.1
-pyramid-celery==3.0.0
 pyramid-retry==1.0
 pyramid-tm==2.2.1
 python-dateutil==2.7.5
 python-editor==1.0.3
 pytz==2018.7
 PyYAML==3.13
-requests==2.20.0
+requests==2.20.1
 simplejson==3.16.0
 six==1.11.0
-SQLAlchemy==1.2.13
-sqlalchemy-paginate==0.0.2
+SQLAlchemy==1.2.14
 transaction==2.4.0
 translationstring==1.3
 urllib3==1.24.1
 venusian==1.1.0
 vine==1.1.4
 waitress==1.1.0
-WebOb==1.8.3
+WebOb==1.8.4
 zope.deprecation==4.3.0
+zope.dottedname==4.3
 zope.interface==4.6.0
 zope.sqlalchemy==1.0
