--- a/development.ini
+++ b/development.ini
@@ -1,9 +1,9 @@
 [app:main]
 use = egg:ocdsapi
 
-elasticsearch.url = http://0.0.0.0:9200
-elasticsearch.index = releases
-elasticsearch.mapping = mapping.json
+#elasticsearch.url = http://0.0.0.0:9200
+#elasticsearch.index = releases
+#elasticsearch.mapping = mapping.json
 
 sqlalchemy.url = postgresql+psycopg2cffi://postgres:admin@127.0.0.1:5432/releases
 swagger.file = swagger.yaml
