--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ variables:
 before_script:
   - docker login -u "$DOCKER_HUB_USERNAME" -p "$DOCKER_HUB_PASSWORD" "$CI_DOCKER_REGISTRY"
   - docker info
-  - docker run -d --name $CI_COMMIT_REF_SLUG_$CI_JOB_ID -e COUCHDB_USER=admin -e COUCHDB_PASSWORD=admin -p 5984:5984 couchdb:1.7.2
+  - docker run -d --name $CI_COMMIT_REF_SLUG_$CI_JOB_ID -p 5432:5432 -e POSTGRES_DB=testing -e POSTGRES_PASSWORD=admin postgres:11.2
 after_script:
   - docker rm -f "$CI_COMMIT_REF_SLUG_$CI_JOB_ID"
   - docker run --rm -u root -v `pwd`:/package:Z -w /package $CI_DOCKER_REGISTRY/$CI_DOCKER_IMAGE:$CI_DOCKER_TAG bash -c "chown -R `id -u`:`id -g` /package"
