--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,8 @@ variables:
   COMPONENT_PROJECT_ID: 466
   COMPONENT_PROJECT_PIPELINE_TRIGGER: "$OCDSAPI_COMPONENT_PROJECT_PIPELINE_TRIGGER"
   CI_DOCKER_REGISTRY: "$CI_REGISTRY"
-  CI_DOCKER_IMAGE: ocds/ocdsapi
-  CI_DOCKER_TAG: latest
+  CI_DOCKER_IMAGE: ocds/api
+  CI_DOCKER_TAG: ci
   RUN_TEST: "(pip install .[testing] && pytest)" 
 
 before_script:
