--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,27 +1,20 @@
 variables:
-  COMPONENT_PROJECT_ID: 466
-  COMPONENT_PROJECT_PIPELINE_TRIGGER: "$OCDSAPI_COMPONENT_PROJECT_PIPELINE_TRIGGER"
-  CI_DOCKER_REGISTRY: "$CI_REGISTRY"
-  CI_DOCKER_IMAGE: ocds/api
-  CI_DOCKER_TAG: ci
+  DOCKER_IMAGE: $CI_REGISTRY/ocds/api:master
   RUN_TEST: "(pip install .[testing] && pytest)" 
 
 before_script:
-  - docker login -u gitlab-ci-token -p "$CI_JOB_TOKEN" "$CI_DOCKER_REGISTRY"
-  - echo $CI_DOCKER_REGISTRY/$CI_DOCKER_IMAGE:$CI_DOCKER_TAG
-  - docker pull $CI_DOCKER_REGISTRY/$CI_DOCKER_IMAGE:$CI_DOCKER_TAG
+  - docker login -u gitlab-ci-token -p "$CI_JOB_TOKEN" "$CI_REGISTRY"
+  - echo $DOCKER_IMAGE
+  - docker pull $DOCKER_IMAGE
   - docker info
   - docker run -d --name $CI_COMMIT_REF_SLUG_$CI_JOB_ID -p 5432:5432 -e POSTGRES_DB=testing -e POSTGRES_PASSWORD=admin postgres:11.2
 after_script:
   - docker rm -f "$CI_COMMIT_REF_SLUG_$CI_JOB_ID"
-  - docker run --rm -u root -v `pwd`:/package:Z -w /package $CI_DOCKER_REGISTRY/$CI_DOCKER_IMAGE:$CI_DOCKER_TAG bash -c "chown -R `id -u`:`id -g` /package"
-  - docker logout  "$CI_DOCKER_REGISTRY"
+  - docker run --rm -u root -v `pwd`:/package:Z -w /package $DOCKER_IMAGE bash -c "chown -R `id -u`:`id -g` /package"
+  - docker logout  "$CI_REGISTRY"
 
 test:
   script:
-    - docker run --network host --rm -u root -v `pwd`:/package:Z -w /package $CI_DOCKER_REGISTRY/$CI_DOCKER_IMAGE:$CI_DOCKER_TAG bash -c "${RUN_TEST}"
-    # - "curl -XPOST --form token=$COMPONENT_PROJECT_PIPELINE_TRIGGER --form ref=master https://gitlab.quintagroup.com/api/v4/projects/$COMPONENT_PROJECT_ID/trigger/pipeline"
+    - docker run --network host --rm -u root -v `pwd`:/package:Z -w /package $DOCKER_IMAGE bash -c "${RUN_TEST}"
   tags:
     - cicd
-#   only:
-#     - master
