--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 alembic==1.0.3
+-e git+https://gitlab.com/openprocurement/ocds-merge#egg=ocdsmerge
 amqp==2.3.2
 billiard==3.5.0.4
 celery==4.2.1
 certifi==2018.10.15
 cffi==1.11.5
 chardet==3.0.4
-colander==1.5.1
+colander==1.7.0
 cornice==3.4.2
 cornice-swagger==0.7.0
 deep-merge==0.0.4
@@ -18,7 +19,6 @@ jsonref==0.2
 kombu==4.2.1
 Mako==1.0.7
 MarkupSafe==1.1.0
--e git+https://github.com/yshalenyk/ocds-merge#egg=ocdsmerge
 paginate==0.5.6
 paginate-sqlalchemy==0.3.0
 PasteDeploy==1.5.2
@@ -39,7 +39,7 @@ six==1.11.0
 SQLAlchemy==1.2.14
 transaction==2.4.0
 translationstring==1.3
-urllib3==1.24.1
+urllib3==1.24.2
 venusian==1.1.0
 vine==1.1.4
 waitress==1.1.0
